syntax = "proto3";
option java_multiple_files = true;
package com.epam.learngrpc;

message PingRequest {
  string message = 1;
  string source = 2;
}

message PongResponse {
  string message = 1;
  string source = 2;
}

service PingPongService {
  rpc pingPong(PingRequest) returns (PongResponse);
}